# dynamo

./: README.md  pyproject.toml
core/: dynamo.py  dynamo_v1.py  proxies.py  registry.py
legacy/: ds_extras.py  ds_legacy.py  dynamo_cls.py  dynamo_fn.py  dynamo_v1.py  reader.py  view.py  widget_legacy.py
proxies/: ds_legacy.py
tests/: test_callable.py  test_dates.py  test_dynamo.py  test_field.py  test_io.py  test_registry.py
tests/fixtures/: data.yaml  models.yaml  tdf.py
tests/sandbox/: test_delegate.py  test_pydantic.py
tests/sandbox/utils/: helpers.py  io.py  logger.py
utils/: dates.py  field.py  helpers.py  io.py  logger.py
xds/catalogue/blueprints/: callable.yaml  ds.yaml  enum.yaml  enums.yaml  env.yaml  mail.yaml  mutation.yaml  widget.yaml  xds.yaml
xds/catalogue/templates/: model.jinja2
xds/configs/: callables.yaml  ds.xbow.yaml  env.bootstrap.yaml  env.prod.yaml
xds/core/: dynamo.py  proxies.py  registry.py  xcallable.py
xds/utils/: dates.py  field.py  helpers.py  io.py  logger.py
